--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
+  "name": "resume-backend",
+  "version": "1.0.0",
+  "description": "Backend server for resume generator app",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon --watch . --ext js,json index.js",
+    "lint": "eslint ."
   },
+  "keywords": [],
+  "author": "Nitesh Agnihotri",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -14,6 +24,9 @@
     "playwright": "^1.54.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
+    "eslint": "^9.32.0",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.10"
   }
 }
