--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --watch . --ext js,json index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "npx playwright install chromium"
   },
   "keywords": [],
   "author": "Nitesh Agnihotri",
